--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "set NODE_ENV=development&&jest --runInBand --no-cache",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@mikro-orm/cli": "^6.4.6",
+    "@mikro-orm/core": "^6.4.6",
+    "@mikro-orm/entity-generator": "^6.4.6",
+    "@mikro-orm/migrations": "^6.4.6",
+    "@mikro-orm/mysql": "^6.4.6",
+    "@mikro-orm/nestjs": "^6.1.1",
+    "@mikro-orm/reflection": "^6.4.6",
+    "@mikro-orm/seeder": "^6.4.6",
+    "@mikro-orm/sql-highlighter": "^1.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
@@ -59,6 +68,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^6.4.17",
+    "@types/pluralize": "^0.0.33",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
@@ -66,6 +76,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "pluralize": "^8.0.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
@@ -82,7 +93,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": "test",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -92,5 +103,17 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "mikro-orm": {
+    "useTsNode": false,
+    "tsConfigPath": "./tsconfig.json",
+    "configPaths": [
+      "src/mikro-orm.config.ts",
+      "dist/mikro-orm.config.js"
+    ],
+    "entities": [
+      "src/**/*.entity.ts",
+      "dist/**/*.entity.js"
+    ]
   }
 }
