--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node --inspect-brk dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "set NODE_ENV=development&&jest --runInBand --no-cache",
     "test:watch": "jest --watch",
@@ -38,7 +38,7 @@
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/throttler": "^6.4.0",
     "argon2": "^0.41.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.1",
     "buffer-to-stream": "^1.0.0",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
@@ -59,7 +59,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/buffer-to-stream": "^1.0.3",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
@@ -114,6 +114,11 @@
     "entities": [
       "src/**/*.entity.ts",
       "dist/**/*.entity.js"
+    ]
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "bcrypt"
     ]
   }
 }
