refactor: update configurations and clean up unused imports across multiple files

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@mikro-orm/cli": "^6.4.6",
@@ -105,7 +106,7 @@
     "testEnvironment": "node"
   },
   "mikro-orm": {
-    "useTsNode": true,
+    "useTsNode": false,
     "tsConfigPath": "./tsconfig.json",
     "configPaths": [
       "src/mikro-orm.config.ts",
